CMAKE_MINIMUM_REQUIRED(VERSION 3.5.0)

PROJECT(dyno-logger)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(SOURCES main.cpp)
set(HEADERS Log.hpp EventLoop.hpp CsvLogger.hpp Timer.hpp)

ADD_EXECUTABLE(dyno-logger ${SOURCES})
